fixes horizontal scrolling issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,6 +64,9 @@ $border-color: #C0E8E8;
 select {
   display: block;
 }
+body {
+  overflow-x: hidden;
+}
 
 /*
 NAVBAR
